--- a/resources/index.html
+++ b/resources/index.html
@@ -14,7 +14,8 @@
   See the License for the specific language governing permissions and
   limitations under the License.
 -->
-<!DOCTYPE HTML><html lang="en"><head>
+<!DOCTYPE HTML>
+<html lang="en"><head>
 <meta charset="UTF-8">
 <title>Apache Charm Examples</title>
 </head>
