--- a/resources/index.html
+++ b/resources/index.html
@@ -15,12 +15,15 @@
   limitations under the License.
 -->
 <!DOCTYPE HTML>
-<html lang="en"><head>
-<meta charset="UTF-8">
-<title>Apache Charm Examples</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Apache Charm Examples</title>
 </head>
 <body>
 <p>
 <h3>Apache Charm Examples</H3>
+<h4><a href="/registration">registration</a></H4>
+<h4><a href="/profile">list of profiles</a></H4>
 </body>
 </html>
